# Profidecon

./: .env  .gitignore  README.md  debug_rag.py  evaluate_rag.py  pyproject.toml  templates_inventory.csv  test_human_csv.py  test_hybrid_search.py
Knowledge/TEMPLATES/: Handover of RP card_bez farebného papiera_.docx  NEW ProfiDeCon_Slovakia_HlavičkovýPapier.docx  Zrušenie rezervácie CP - ak nejde priamo cez e-mail.docx
Knowledge/TEMPLATES/Checklisty/: Checklist - 1st RP (business).docx  Checklist - 1st RP (employment).docx  Checklist - 1st RP (employment- ICT).docx  Checklist - 1st RP (family reunification - child).docx  Checklist - 1st RP (family reunification - spouse).docx  Checklist - 1st RP (special activity).docx  Checklist - 1st RP (studium).docx  Checklist - 1st RP EÚ (employment).docx  Checklist - 1st RP EÚ (family reunification - child).docx  Checklist - 1st RP EÚ (family reunification - spouse).docx  Checklist - 1st RP EÚ (without purpose).docx  Checklist - 1st RP EÚ - Business.docx  Checklist - Blue card EÚ.docx  Checklist - Business verified invitation.docx  Checklist - Change of address.docx  Checklist - Change of employer.docx  (+30 more)
Preprocessing/: File_analyzer.py
preprocessor/: .env  cli.py  ingestion.py  models.py  monitoring.py
preprocessor/parsers/: base.py  docx_parser.py  msg_parser.py  pdf_parser.py  registry.py
preprocessor/processors/: deduplicator.py  enricher.py  normalizer.py  ocr.py  quality_checker.py  serializer.py
preprocessor/taxonomy/: analyzer.py  extractor.py
profidecon/: __init__.py  __main__.py
sdk/: retrieval.py
tests/: debug_rag.py  human.csv  test_analyzer.py  test_deduplicator.py  test_enricher.py  test_ingestion.py  test_quality_checker.py  test_registry.py  test_serializer.py
vectorizer/: __init__.py  cli.py  embedder.py  loader.py  qdrant_client.py  settings.py
(+428 files in other folders)
